[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "waveframe-guard"
version = "0.1.0"
description = "Stop unsafe AI actions before they execute"
authors = [
    { name = "Shawn Wright", email = "swright@waveframelabs.org" }
]
readme = "README.md"
requires-python = ">=3.10"

# 🔒 Proprietary license
license = { text = "Proprietary" }

dependencies = [
    "cricore"
]

[tool.setuptools.packages.find]
where = ["."]